# npm-ide-analyst

./: .gitattributes  .gitignore  pyproject.toml
docs/superpowers/plans/: 2026-07-06-npm-ide-analyst-plan-a-static-engine.md  2026-07-06-npm-ide-analyst-plan-b-dynamic-sandbox.md  2026-07-07-native-syscall-tracing.md  2026-07-07-npm-ide-analyst-sinkhole.md  2026-07-08-bun-runtime-detonation.md
docs/superpowers/specs/: 2026-07-06-npm-ide-analyst-design.md  2026-07-07-native-syscall-tracing-design.md  2026-07-07-npm-ide-analyst-sinkhole-design.md  2026-07-08-bun-runtime-detonation-design.md
samples/colorz-utill/: README.md  build.py
scripts/: README.md  setup.ps1  setup.sh
src/npm_ide_analyst/: cli.py  debug.py  models.py
src/npm_ide_analyst/acquire/: collect_windows.py  hashing.py  unpack.py
tests/: test_ast_analysis.py  test_bun_detonation.py  test_cli.py  test_cli_dynamic.py  test_cli_progress.py  test_collect_windows.py  test_config_hijack.py  test_debug.py  test_detonation_flags.py  test_engine.py  test_harness_entrypoints.py  test_harness_hooks.py  test_harness_native_trace.py  test_harness_reexec.py  test_harness_sinkhole.py  test_hashing.py  test_html_report.py  test_ioc_scan.py  test_json_report.py  test_manifest.py  test_models.py  test_orchestrator_dedup.py  test_remote_detonation.py  test_report_dynamic.py  test_safety_invariant.py  test_sample_fixture.py  test_sandbox_events.py  test_sandbox_findings.py  test_sandbox_orchestrator.py  test_sandbox_run_flags.py  test_sinkhole_degradation.py  test_smoke.py  test_timeline.py  test_unpack.py
(+27 files in other folders)
