[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "npm-ide-analyst"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "esprima>=4.0",
    "jsbeautifier>=1.15",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
npm-ide-analyst = "npm_ide_analyst.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
